# brAthena-old

versoes/pre-renovacao/src/char/: CMakeLists.txt  Makefile.in  char.c  int_mail.c  int_party.c  inter.c
versoes/pre-renovacao/src/map/: CMakeLists.txt  Makefile.in  atcommand.c  atcommand.h  battle.c  battle.h  buyingstore.c  chat.h  chrif.c  chrif.h  clif.c  clif.h  guild.c  instance.h  intif.c  intif.h  itemdb.h  log.c  log.h  map.c  map.h  mercenary.c  mercenary.h  mob.c  mob.h  npc.c  npc.h  party.c  path.c  pc.c  pc.h  pet.c  quest.c  script.c  skill.c  skill.h  status.c  status.h  trade.c  unit.c  (+1 more)
versoes/renovacao/: CMakeLists.txt  Changelog.txt  Makefile.in  brAthena-10.sln  brAthena-9.sln  brathena-admin  brathena-start  configure  configure.in
versoes/renovacao/conf/: atcommand_athena.conf  battle_athena.conf  char_athena.conf  charhelp.txt  grf-files.txt  groups.conf  help.txt  help2.txt  inter_athena.conf  log_athena.conf  login_athena.conf  map_athena.conf  maps_athena.conf  motd.txt  msg_athena.conf  packet_athena.conf  plugin_athena.conf  script_athena.conf  subnet_athena.conf
versoes/renovacao/conf/battle/: battle.conf  battleground.conf  client.conf  exp.conf  feature.conf  gm.conf  guild.conf  homunc.conf  misc.conf  monster.conf  pet.conf  player.conf  skill.conf
versoes/renovacao/conf/mapflag/: battleground.txt  fireworks.txt  night.txt  nightmare.txt  nobranch.txt  noicewall.txt  noloot.txt  nomemo.txt  nopenalty.txt  nopvp.txt  noreturn.txt  nosave.txt  noskill.txt  noteleport.txt  novending.txt  nowarpto.txt  partylock.txt  pvp_noguild.txt  reset.txt  restricted.txt  town.txt
versoes/renovacao/db/: attr_fix.txt  const.txt  elemental_skill_db.txt  exp.txt  guild_skill_tree.txt  homun_skill_tree.txt  homunculus_db.txt  item_buyingstore.txt  item_db.txt  item_db2.txt  item_delay.txt  item_giftbox.txt  item_misc.txt  item_noequip.txt  item_trade.txt  job_db1.txt  job_db2.txt  map_index.txt  mercenary_db.txt  mob_avail.txt  mob_boss.txt  mob_branch.txt  mob_db.txt  mob_penalty_db.txt  mob_poring.txt  mob_race2_db.txt  mob_skill_db.txt  mob_skill_db2.txt  packet_db.txt  pet_db.txt  produce_db.txt  quest_db.txt  refine_db.txt  skill_cast_db.txt  skill_castnodex_db.txt  skill_db.txt  skill_nocast_db.txt  skill_require_db.txt  skill_tree.txt  skill_unit_db.txt  (+1 more)
versoes/renovacao/npc/: scripts_brathena.conf  scripts_classes.conf  scripts_main.conf  scripts_monstros.conf
versoes/renovacao/npc/aeroplanos/: aeroplanos.txt  dirigiveis.txt  einbroch.txt  juno.txt
versoes/renovacao/npc/cidades/: brasilis.txt  dewata.txt  einbroch.txt  izlude.txt  juno.txt  louyang.txt  lutie.txt  manuk.txt  moscovia.txt
versoes/renovacao/npc/comerciantes/: aljaves.txt  alquimista.txt  alugueis.txt  buying_shops.txt  cabelereiro_cash.txt  caixas_de_municao.txt  diamante.txt  ervas_envenenadas.txt  leiteiro.txt  livros_de_criacao.txt  lojas.txt  lojas_cash.txt  manuk.txt  refinador_avancado.txt  refinadores.txt  runas.txt  tintureiro_de_cabelo.txt  tintureiro_de_roupas.txt  vendedor_de_municao.txt  wander_pet_food.txt
versoes/renovacao/npc/eventos/: festival_do_bolinho.txt  gdevent_aru.txt  god_se_festival.txt  halloween_2008.txt  natal.txt  resetar_habilidades.txt  semana_da_crianca.txt
versoes/renovacao/npc/gde/: aldeg_cas03.txt  gde_controlador.txt  gde_padrao.txt  gefg_cas02.txt  gefg_cas03.txt  payg_cas01.txt  payg_cas04.txt  prtg_cas03.txt
versoes/renovacao/npc/gde2/: arug_cas01.txt  arug_cas02.txt  arug_cas03.txt  arug_cas04.txt  arug_cas05.txt
versoes/renovacao/npc/guias/: guias_alb.txt  guias_ama.txt  guias_amatsu.txt  guias_ayo.txt  guias_cmd.txt  guias_einbr.txt  guias_geffen.txt  guias_hugel.txt  guias_izlude.txt  guias_juno.txt  guias_moc.txt  guias_morroc.txt  guias_mosk.txt  guias_nif.txt  guias_niflheim.txt  guias_pay.txt  guias_pron.txt  guias_um.txt
versoes/renovacao/npc/instancias/: ninho_de_nidhoggr.txt  santuario_selado.txt  torre_infinita.txt
versoes/renovacao/npc/kafras/: dts_warper.txt  kafras_com.txt  kafras_dew.txt  kafras_mor.txt  kafras_new.txt  kafras_pron.txt
versoes/renovacao/npc/outros/: correio.txt  divorcio.txt  funcoes_globais.txt  ginasio.txt  hugel_bingo.txt  jogos_de_comodo.txt  leilao.txt  poring_war.txt  quadro_de_avisos.txt  quadro_de_mensagens.txt  resetar_habilidades.txt  sorte.txt  status_do_selo.txt  tumulos.txt
versoes/renovacao/npc/personalizados/: Banqueiro.txt  Enquetes_oficiais.txt  Resetadora.txt
versoes/renovacao/npc/quests/: 2007_relay.txt  Bard_Quest.txt  Kiel_Hyre_Quest.txt  Lvl4_weapon_quest.txt  The_Sign_Quest.txt  counteragent_mixture.txt  cupet.txt  doomed_swords.txt  eye_of_hellion.txt  mrsmile.txt  ninja_quests.txt  quests_13_1.txt  quests_13_2.txt  quests_airship.txt  quests_amatsu.txt  (+15 more)
versoes/renovacao/sql-files/: brA_svn0357.sql  brA_svn0660.sql  brA_svn1090.sql  conversor_engine_myisam.sql  leia-me.txt  logs.sql  main.sql
versoes/renovacao/vcproj-10/: char-server_sql.vcxproj  char-server_sql.vcxproj.filters  login-server_sql.vcxproj  login-server_sql.vcxproj.filters  map-server_sql.vcxproj  map-server_sql.vcxproj.filters  mapcache.vcxproj  mapcache.vcxproj.filters
versoes/renovacao/vcproj-9/: char-server_sql.vcproj  map-server_sql.vcproj  mapcache.vcproj  plugin-pid.vcproj
versoes/testes/: CMakeLists.txt  CTestConfig.cmake  Changelog.txt  Makefile.in  configure  configure.in
versoes/testes/conf/: battle_athena.conf  char_athena.conf  groups.conf  help.txt  inter_athena.conf  map_athena.conf  packet_athena.conf  script_athena.conf
versoes/testes/db/: LEIA-ME.txt  const.txt  item_noequip.txt  map_index.txt  packet_db.txt  pet_db2.txt
versoes/testes/npc/: scripts_brathena.conf  scripts_classes.conf  scripts_guild.conf  scripts_mapflags.conf  scripts_personalizados.conf  scripts_portais.conf
versoes/testes/sql-files/: brA_svn0403.sql  brA_svn0996.sql  brA_svn1051.sql
versoes/testes/src/: CMakeLists.txt
versoes/testes/vcproj-10/: char-server_sql.vcxproj  char-server_sql.vcxproj.filters  login-server_sql.vcxproj  map-server_sql.vcxproj  map-server_sql.vcxproj.filters  mapcache.vcxproj
(+5884 files in other folders)
