# Copyright (c) brAthena Dev Team - Licensed under GNU GPL
# For more information, see LICENSE in the main folder

# -----------------------------------------------------------------------------
# Add the directories to configure the sources
add_subdirectory( common )
add_subdirectory( char )
add_subdirectory( login )
add_subdirectory( map )
add_subdirectory( tool )
